@@ -504,6 +504,9 @@ void print_status_info( pslr_status status ) {
     printf("drive mode: %d\n", status.drive_mode);
     printf("bracket ev: %d\n", status.bracket_ev);
     printf("shake reduction: %s\n", status.shake_reduction > 0 ? "on" : "off");
+    printf("white balance mode: %d\n", status.white_balance_mode);
+    printf("white balance adjust mg: %d\n", status.white_balance_adjust_mg);
+    printf("white balance adjust ba: %d\n", status.white_balance_adjust_ba);
 }
 
 void usage(char *name) {
