@@ -9,6 +9,7 @@ version 0.70.02
 	Reading shake reduction (K-x only)
 	Reading af mode (K-x only)
 	Autofocus mode bugfix
+	Reading white balance fields (K-x only)
 
 version 0.70.01 ( 2011-01-19 )
 	File format support for commandline interface (--file_format)
